Update company name

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 author:
   name             : "서울숲 미세먼지"
   avatar           : "/assets/images/avatar2.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Product Data Analyst @DeliveryHeroKorea"
+  bio              : "Product Data Analyst @Yogiyo"
   location         : "Seoul"
   email            : "Email"
   links:
